--- a/Website_New/profile.css
+++ b/Website_New/profile.css
@@ -325,10 +325,11 @@ textarea:focus
 }
 
 .ringBell, .ringBell:after 
-{ 
+{  
   z-index: 3000; 
-  float: left; 
-  left: 70%; 
+  float: right; 
+  left: 88%; 
+  margin-top: 15px; 
   width: 35px;
   height: 35px;
 }
@@ -340,11 +341,12 @@ textarea:focus
 
 .-count, .-count:before
 {
+  margin-top: 10px; 
   float: right; 
-  left: 70%; 
+  left: 88%;
+  top: 30px;  
   width: 20px;
   height: 20px;
-  margin: 0px 0px;
   border-radius: 30%;
 }
 
@@ -389,21 +391,23 @@ textarea:focus
   align-items: center;
   width: 20px;
   height: 20px;
-  background-color: red;
+  background-color: var(--pink); ;
   margin: -6px 0 0 26px;
   font-family: monospace;
   font-size: 20px;
   font-weight: bold;
   z-index: 90;
+  color: white; 
 }
 
 .-count:before 
 {
+  color: var(--pink); 
   content: '';
   box-sizing: border-box;
-  border: 1.5px solid red;
-  margin-left: -14px; 
-  margin-top: 0px; 
+  border: 1.5px solid var(--pink);
+  margin-left: -18px; 
+  margin-top: -30px; 
 }
 
 .ringBell:hover .-count:before 
@@ -422,4 +426,3 @@ textarea:focus
     transform: scale(2);
   }
 }
-
